--- a/colors.html
+++ b/colors.html
@@ -68,7 +68,7 @@
 
     <div class="container my-4 p-3 shadow bg-light rounded-3">
 
-        <div class="border border-primary">   border  </div>
+        <div class="border border-primary">   borders  </div>
         <div class="border border-secondary"> secondary  border  </div>
         <div class="border border-success">  success border  </div>
         <div class="border border-danger">  danger border  </div>
