--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             class="navbar navbar-expand-sm navbar-light bg-light"
         >
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">Navigation bar</a>
                 <button
                     class="navbar-toggler d-lg-none"
                     type="button"
