button added with bs5

--- a/colors.html
+++ b/colors.html
@@ -82,7 +82,10 @@
 
     </div>
 
+    <div class="container my-4 d-flex justify-content-center">
+        <a href="typo.html" class="btn btn-danger">go to typography</a>
 
+    </div>
     
 
         <script
