--- a/containers.html
+++ b/containers.html
@@ -20,14 +20,14 @@
     </head>
 
     <body>
-        <div class="container m-5 p-5  shadow bg-light rounded-5" >
+        <div class="container mt-5 p-5  shadow bg-light rounded-5" >
             <h3>default container</h3>
             <h4>this container is always on the center, notice the equal margins on both side</h4>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae reprehenderit illo expedita, maxime cupiditate nihil facilis officiis ducimus, ratione, assumenda harum tenetur nam facere porro nemo illum qui fugit dolores.</p>
 
         </div>
 
-        <div class="container-fluid  p-5 shadow bg-light rounded-5">
+        <div class="container-fluid mt-5 p-5 shadow bg-light rounded-5">
           
 
             <h3>default containers</h3>
@@ -78,6 +78,11 @@
                 </div>
             </div>
 
+
+            <div class="container my-4 d-flex justify-content-center">
+                <a href="colors.html" class="btn btn-success">Go to Colors</a>
+
+            </div>
 
         <!-- Bootstrap JavaScript Libraries -->
         <script
