--- a/typo.html
+++ b/typo.html
@@ -146,7 +146,10 @@
         </div>
 
 
+        <div class="container my-4 d-flex justify-content-center">
+            <a href="containers.html" class="btn btn-danger">Go to containers</a>
 
+        </div>
 
 
         <!-- Bootstrap JavaScript Libraries -->
