--- a/components.html
+++ b/components.html
@@ -111,7 +111,7 @@
                             <img src="./img/45804851_1768884273220125_7468773722007011328_n.jpg" alt="me when i was a child" class="card-img-top">
                             <div class="card-boy d-flex flex-column">
                                  <h5 class="card-title"> Project 1</h5>
-                                 <p class="card-text flex-grow-1">
+                                 <p class="card-text flex-grow-1 p-2">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptas ut, est laborum minus facere similique voluptate labore deserunt consequatur dolore omnis suscipit deleniti dolor veritatis officiis nostrum aut! Quisquam!</p>
 
                                     <a href="" class="btn btn-primary mt-auto m-2">View Project</a>
@@ -126,11 +126,11 @@
                         <div class="card h-100 d-flex flex-column">
                             <img src="./img/45804851_1768884273220125_7468773722007011328_n.jpg" alt="me when i was a child" class="card-img-top">
                             <div class="card-boy d-flex flex-column">
-                                 <h5 class="card-title"> Project 1</h5>
-                                 <p class="card-text flex-grow-1">
+                                 <h5 class="card-title"> Project 2</h5>
+                                 <p class="card-text flex-grow-1 p-2">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptas ut, est laborum minus facere similique voluptate labore deserunt consequatur dolore omnis suscipit deleniti dolor veritatis officiis nostrum aut! Quisquam!</p>
 
-                                    <a href="" class="btn btn-primary mt-auto m-2">View Project</a>
+                                    <a href="" class="btn btn-primary mt-auto ">View Project</a>
                             </div>
                         </div>
                     </div>
@@ -138,8 +138,8 @@
                         <div class="card h-100 d-flex flex-column">
                             <img src="./img/45804851_1768884273220125_7468773722007011328_n.jpg" alt="me when i was a child" class="card-img-top">
                             <div class="card-boy d-flex flex-column">
-                                 <h5 class="card-title"> Project 1</h5>
-                                 <p class="card-text flex-grow-1">
+                                 <h5 class="card-title"> Project 3</h5>
+                                 <p class="card-text flex-grow-1 p-2">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem voluptas ut, est laborum minus facere similique voluptate labore deserunt consequatur dolore omnis suscipit deleniti dolor veritatis officiis nostrum aut! Quisquam!</p>
 
                                     <a href="" class="btn btn-primary mt-auto m-2">View Project</a>
