--- a/form.html
+++ b/form.html
@@ -20,8 +20,8 @@
 
     <body>
         <!-- parent class container-->
-        <div class="container my-5">
-            <h1 class="mb-4"> BOOTSRAP FORM</h1>
+        <div class="container my-5 ">
+            <h1 class="mb-4 text-center"> BOOTSRAP FORM</h1>
 
 
 
